ViewInternal: Fix makeVisible(..)

Summary:
- Proper calculation of new position to scroll
- Don't force to center cursor in view in most cases.
  This change looks slightly dangerous but nobody knows
  why that was done. So we give it a try now!

BUG: 399014
BUG: 306745
FIXED-IN: 5.58

Differential Revision: https://phabricator.kde.org/D17857